...
                                    <constraint firstItem="FNU-gV-Bj3" firstAttribute="height" secondItem="fni-Ax-yea" secondAttribute="height" id="lee-6Q-qnZ"/>
                                </constraints>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oBs-gS-epu">
                                <rect key="frame" x="20" y="153" width="335" height="40"/>
                                <color key="backgroundColor" red="0.2274509804" green="0.71764705880000002" blue="0.58431372550000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="loginButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="39w-ED-Ywp"/>
                                </constraints>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                <state key="normal" title="LOGIN">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <connections>
                                    <action selector="login:" destination="BYZ-38-t0r" eventType="touchUpInside" id="K69-HK-iRe"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ehE-px-t2y">
                                <rect key="frame" x="20" y="333.5" width="335" height="0.0"/>
                                <accessibility key="accessibilityConfiguration" identifier="message"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
